--- a/Updates.html
+++ b/Updates.html
@@ -7,7 +7,7 @@
 		<li><img src = "Activism.png" frameborder = "50" height = "50" width = "100"></a></li>
 		<li><a href = "index.html" target ="_blank">Introduction</a></li>
 		<li><a href = "Updates.html" target = "_blank">Updates</a></li>
-		<li><a href = "" target = "_blank">References</a></li>
+		<li><a href = "References.html" target = "_blank">References</a></li>
 		<li><a href = "https://www.instagram.com/corklc_activism/" target = "_blank">Instagram</a></li>
 		</ul>
 <head>
