--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	
 <ul>
 		<li><img src = "Activism.png" frameborder = "50" height = "50" width = "100"></a></li>
-		<li><a href = "Intro.html" target ="_blank">Introduction</a></li>
-		<li><a href = "Updates.html" target = "_blank">Updates</a></li>
-		<li><a href = "References.html" target = "_blank">References</a></li>
-		<li><a href = "https://www.instagram.com/corklc_activism/" target = "_blank">Instagram</a></li>
+		<li><a href = "Intro.html">Introduction</a></li>
+		<li><a href = "Updates.html">Updates</a></li>
+		<li><a href = "References.html">References</a></li>
+		<li><a href = "https://www.instagram.com/corklc_activism/">Instagram</a></li>
 		</ul>
 <head>
 </head>	
