--- a/Updates.html
+++ b/Updates.html
@@ -57,7 +57,7 @@ in order to provide enough time for everyone to gather any significant research 
 
 	</li>
 	<li>27/01/23 - Conclusions: Online Activism has had a significant impact on society and modern politics. It has allowed for the mobilization of large numbers of people around social and political causes and has given rise to new forms of political campaigning. However, it's important to recognise the challenges that come with online activism and to work towards creating a safe and inclusive online space for activists.
-		Ultimately, online activism ahs the potential to be a powerful tool for change and it will be important to continue to explore it's impacts in the years to come.</li>
+		Ultimately, online activism has the potential to be a powerful tool for change and it will be important to continue to explore it's impacts in the years to come.</li>
 
 
 
